# finport

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
analytics/: engine.py
analytics/calculators/: __init__.py  allocation.py  gains.py  net_worth.py
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  bf59617c4f52_initial.py
backend/app/: config.py  main.py
backend/app/core/: events.py  storage.py
backend/app/database/: session.py
backend/app/models/: __init__.py  account.py  audit.py  fx_rate.py  import_session.py  income.py  institution.py  parser_run.py  portfolio.py  security.py  statement.py  transaction.py  types.py
backend/app/services/: account_service.py  analytics_service.py  holdings_service.py  ingestion_service.py  normalisation_service.py  reconciliation_service.py  security_service.py  transaction_service.py
docker/: Dockerfile.api  Dockerfile.frontend  nginx.conf
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  PARSER_FRAMEWORK.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
parsers/: __init__.py  detector.py  registry.py
parsers/base/: __init__.py  candidate_models.py  parser_interface.py
parsers/generic/: __init__.py  csv_parser.py  pdf_parser.py
parsers/institutions/: __init__.py
reconciliation/: __init__.py  engine.py
reconciliation/rules/: __init__.py  balance_verification.py  base.py  duplicate_detection.py  transfer_matching.py
(+27 files in other folders)
